[package]
name = "shuttle_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.6.2"
axum-macros = "0.4.0"
hyper = "0.14"
mime = "0.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle = "0.6.1"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-shared-db = { version = "0.34.1", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros", "uuid"] }
tokio = "1.28.2"
tower = "0.4.13"
tracing = "0.1.40"
uuid = "1.6.1"
